--- a/Ejercicio 1.html
+++ b/Ejercicio 1.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <a href="#Section1">Section1</a>
-    <a href="#Section2">Section2</a>
-    <a href="#Section3">Section3</a>
-    <a href="#Section4">Section4</a>
-    <a href="#Section5">Section5</a>
+    <a href="#1">Section 1</a>
+    <a href="#2">Section 2</a>
+    <a href="#3">Section 3</a>
+    <a href="#4">Section 4</a>
+    
     </nav>
-    <h2>Section1🔝</h2>
+    <h2 id="1">Section 1 <a href="#top"> 🔝</a></h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
@@ -22,7 +22,7 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
         of Lorem Ipsum.</p>
 
-    <h2>Section2 <a href="#top"> 🔝</a></h2>
+    <h2 id="2">Section 2 <a href="#top"> 🔝</a></h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
@@ -30,7 +30,7 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
         of Lorem Ipsum.</p>
 
-    <h2>Section4</h2>
+    <h2 id="3">Section 3 <a href="#top"> 🔝</a></h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
@@ -38,7 +38,7 @@
         Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
         of Lorem Ipsum.</p>
 
-    <h2>Section5</h2>
+    <h2 id="4">Section 4 <a href="#top"> 🔝</a></h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
         a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
